--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "^24.8.0"
   },
   "dependencies": {
+    "minimatch": "^3.0.4",
     "minimist": "^1.2.0",
     "node-fetch": "^2.5.0"
   }
