--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "bin": {
-    "bsa-c20-update": "index.js"
+    "bsa-c20-update": "index.js",
+    "bt-redist-push": "bt-redist-push.sh"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
